--- a/src/index.css
+++ b/src/index.css
@@ -71,19 +71,19 @@ body {
 @keyframes pulse {
   0% {
     transform: scale(0.8);
-    background-color: #b3d4fc;
+    background-color: #e3f78a;
     box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
   }
 
   50% {
     transform: scale(1.2);
-    background-color: #4b79e4;
+    background-color: #ffef63;
     box-shadow: 0 0 0 10px rgba(178, 212, 252, 0);
   }
 
   100% {
     transform: scale(0.8);
-    background-color: #2584f8;
+    background-color: #dcff40;
     box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
   }
 }
