--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,6 @@ body {
   @apply flex-row relative justify-center items-center py-2 px-6 outline-none;
 }
 
-/* ul>li {
-  @apply hover: text-green-600
-} */
 
 .shadow {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -31,7 +28,7 @@ body {
 }
 
 .bg_gradient {
-  @apply bg-gradient-to-t from-slate-900 to-transparent top-0
+  @apply bg-gradient-to-t from-gray-900 to-transparent top-0
 }
 
 .dots-container {
