--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 
 
 body {
@@ -24,7 +27,7 @@ body {
 }
 
 .shadow1 {
-  box-shadow: blue 0px 0px 0px 2px;
+  box-shadow: rgb(255, 196, 0) 0px 0px 0px 2px;
 }
 
 .bg_gradient {
@@ -75,12 +78,12 @@ body {
   50% {
     transform: scale(1.2);
     background-color: #ffef63;
-    box-shadow: 0 0 0 10px rgba(178, 212, 252, 0);
+    box-shadow: 0 0 0 10px rgba(202, 211, 73, 0);
   }
 
   100% {
     transform: scale(0.8);
     background-color: #dcff40;
-    box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
+    box-shadow: 0 0 0 0 rgba(212, 243, 177, 0.7);
   }
 }
